@@ -10,10 +10,23 @@
 # IP address/hostname to bind the default listener to. If not given, the
 # default listener will not be bound to a specific address and so will be
 # accessible to all network interfaces.
+# bind_address ip-address/host name
 #bind_address
 
 # Port to use for the default listener.
 #port 1883
+
+# Listen on a port/ip address combination. By using this variable multiple
+# times, mosquitto can listen on more than one port. If this variable is used
+# and neither bind_address nor port given, then the default listener will not
+# be started.
+# The port number to listen on must be given. Optionally, an ip address or host
+# name may be supplied as a second argument. In this case, mosquitto will
+# attempto bind the listener to that address and so restrict access to the
+# associated network and interface. By default, mosquitto will listen on all
+# interfaces.
+# listener port-number [ip address/host name]
+#listener
 
 # Time in seconds to wait before resending an outgoing QoS=1 or QoS=2 message.
 #retry_interval 20
@@ -155,7 +168,6 @@
 #autosave_on_changes
 #clientid_prefixes
 #connection_messages
-#listener
 #retained_persistence
 #trace_level
 #addresses
